# sfed

./: Cargo.toml  README.md
src/: command_parser.rs  crypto.rs  file.rs  main.rs
