[package]
name = "sfed"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm-siv = "0.10.3"
pbkdf2 = "0.10.0"
clap = { version = "3.0.6", features = ["derive"] }
anyhow = "1.0.52"
rand = "0.8.4"
rpassword = "5.0"
